<resources>
    <string name="app_name">HiWeather</string>
    <string name="today_weather">How is the weather like today</string>
    <string name="today_min">min</string>
    <string name="today_current">current</string>
    <string name="today_max">max</string>
    <string name="empty">--</string>
    <string name="current_temperature">%1$s &#176;</string>
    <string name="location_permissions">Allow location permission</string>
    <string name="location_permissions_description">HiWeather requires access to your location to work.</string>
    <string name="action_accept">Allow</string>
    <string name="action_decline">Deny</string>
    <string name="search_city">Search for a city</string>
    <string name="add_city">Add City</string>
    <string name="add">Add</string>
    <string name="location_load_error">Location couldn\'t be loaded. Try again</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="delete">delete</string>
    <string name="view_map">View saved locations on map</string>
    <string name="my_location">\" - My Location\"</string>
</resources>
