<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dvttest.hiweather.ui.current.WeatherViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.current.WeatherFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            style="?toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="432dp"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                style="?toolbarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/zero"
                android:fitsSystemWindows="true"
                app:expandedTitleGravity="center|top"
                app:titleEnabled="false"
                app:weatherScrim="@{viewModel.currentWeather.weatherId}">

                <ImageView
                    android:id="@+id/weatherCondition"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:contentDescription="@string/today_weather"
                    android:elevation="@dimen/zero"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:weatherImage="@{viewModel.currentWeather.weatherId}" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/expanded_toolbar"
                    style="?toolbarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@android:color/transparent"
                    android:elevation="@dimen/zero"
                    app:layout_collapseMode="pin" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="@dimen/list_two_liner_size">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/keyline_4"
                        android:layout_height="@dimen/keyline_4"
                        android:layout_marginEnd="@dimen/keyline_2"
                        android:contentDescription=""
                        android:src="@drawable/ic_location"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/current_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/current_location"
                        tools:src="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/current_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="?alphaEmphasisHigh"
                        android:letterSpacing="0.2"
                        android:text="@{viewModel.currentWeather.addressName}"
                        android:textAllCaps="true"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@tools:sample/cities" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="@dimen/list_expanded_size"
                    android:layout_marginBottom="@dimen/standard_touch_size">

                    <TextView
                        android:id="@+id/current_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textAppearance="?textAppearanceHeadline2"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:temperature="@{viewModel.currentWeather.temp}"
                        tools:text="@string/empty" />

                    <TextView
                        android:id="@+id/current_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:letterSpacing="0.1"
                        android:text="@{viewModel.currentWeather.weather}"
                        android:textAllCaps="true"
                        android:textAppearance="?textAppearanceHeadline5"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/current_temperature"
                        tools:text="@tools:sample/cities" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/last_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="@dimen/keyline_4"
                    android:layout_marginBottom="@dimen/keyline_2"
                    android:alpha="?alphaEmphasisHigh"
                    android:textAppearance="?textAppearanceOverline"
                    android:textStyle="bold"
                    app:lastUpdate="@{viewModel.currentWeather.lastUpdate}"
                    tools:text="@tools:sample/date/mmddyy" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_two_liner_with_icon_size"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:weatherBackground="@{viewModel.currentWeather.weatherId}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/keyline_4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/min_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:temperature="@{viewModel.currentWeather.tempMin}"
                        tools:text="@tools:sample/us_zipcodes" />

                    <TextView
                        android:id="@+id/min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/keyline_1"
                        android:text="@string/today_min"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="@+id/min_value"
                        app:layout_constraintStart_toStartOf="@+id/min_value"
                        app:layout_constraintTop_toBottomOf="@+id/min_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout4"
                    app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/current_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:temperature="@{viewModel.currentWeather.temp}"
                        tools:text="@tools:sample/us_zipcodes" />

                    <TextView
                        android:id="@+id/current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/keyline_1"
                        android:text="@string/today_current"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="@+id/current_value"
                        app:layout_constraintStart_toStartOf="@+id/current_value"
                        app:layout_constraintTop_toBottomOf="@+id/current_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/keyline_4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/max_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:temperature="@{viewModel.currentWeather.tempMax}"
                        tools:text="@tools:sample/us_zipcodes" />

                    <TextView
                        android:id="@+id/max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/keyline_1"
                        android:text="@string/today_max"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/max_value"
                        app:layout_constraintTop_toBottomOf="@+id/max_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:alpha="?alphaEmphasisHigh"
                    android:background="@color/color_common_light_grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:weatherBackground="@{viewModel.currentWeather.weatherId}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:forecast="@{viewModel.forecast}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="6"
                tools:listitem="@layout/item_forecast" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
